Se puede colocar cualquier imagen deseada.

--- a/inventario/src/main/resources/static/style/add_product.css
+++ b/inventario/src/main/resources/static/style/add_product.css
@@ -48,6 +48,13 @@ main{
     color: white !important;
 }
 
+.productImage{
+    width: 9rem;
+    height: 9rem;
+    border: 1px solid black;
+    border-radius: 10%;
+}
+
 /*Footer*/
 .socialIcon {
     width: 2rem;
